...
                android:elevation="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvAppTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admin_image_browser_title"
                    android:textColor="@color/primary_blue"
                    android:textSize="20sp"
                    android:textStyle="bold"
...
